# Author: Nick Zwart
# Date: 2024nov24

[metadata]
name = memoize
url = https://github.com/nckz/memoize
description = This is a module.
author = Nick Zwart
author_email = nick.zwart@gmail.com

[options]
setup_requires = setuptools_scm
include_package_data = True
packages = find:

[options.package_data]
* = *.yml, *.md
